Angular Frontend/src/app/landing/landing.component.css
.landing-page{
    text-align: center;
    position: relative;
}
h1{
    
}

h2{
    
}

p{

}

.grid-container1 {
    grid-gap: 20px;
    margin: 5vw;
    margin-top: 2vw;
  }

.grid-container2 {
    grid-gap: 20px;
    margin-top: 8vw;
    margin-bottom: 2vw;
    background-color: lavender;
  }
  
.grid-item {
    padding: 0.25vw;
}


.headline-4{
    font-size: 5vw;
    font-weight: 500;
    line-height: 1.4;
    margin: 1.5rem;
    letter-spacing: 0.00938em;
}

@media only screen and (min-width: 650px) and (max-width: 900px) {
    .headline-4{
        font-size: 4vw;;
    }
}

.headline-2{
    font-size: 3vw;
    font-weight: 500;
    line-height: 1.4;
    margin: 1.5rem;
    letter-spacing: 0.00938em
}


.body-1{
    font-size: 1.3vw;
    font-weight: 400;
    line-height: 1.7;
    margin: 1.5rem;
    letter-spacing: 0.00938em;
}

.left-align{
    text-align: left;
}

.landing-image{
    max-height: 100%;
    max-width: 100%;
}

.landing-logo{
    margin-top: 20px;
    margin-bottom: 0px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 20%;
}

.button-text{
    font-size: 1.3vw;
    font-weight: 400;
    line-height: 1.7;
    margin: 1.5rem;
    letter-spacing: 0.00938em;
    padding: 1.5vw 1vw;
}

